for C-Life-XG1: HNAT & Sound driver(couldn't work)

--- a/trunk/configs/boards/C-Life-XG1/kernel-4.4.x.config
+++ b/trunk/configs/boards/C-Life-XG1/kernel-4.4.x.config
@@ -955,6 +955,53 @@ CONFIG_RA_NAT_NONE=y
 CONFIG_DST_CACHE=y
 CONFIG_HAVE_BPF_JIT=y
 
+
+#
+# Use old/new NAT Acceleration Mode
+#
+CONFIG_HW_NAT=y
+# CONFIG_OLD_HW_NAT is not set
+
+#
+# Ralink NAT Acceleration Mode
+#
+# CONFIG_RA_NAT_NONE is not set
+CONFIG_RA_NAT_HW=y
+CONFIG_RA_HW_NAT=y
+CONFIG_HNAT_V2=y
+CONFIG_RA_HW_NAT_LAN_VLANID=1
+CONFIG_RA_HW_NAT_WAN_VLANID=2
+CONFIG_RA_HW_NAT_BINDING_THRESHOLD=20
+CONFIG_RA_HW_NAT_QURT_LMT=16383
+CONFIG_RA_HW_NAT_HALF_LMT=16383
+CONFIG_RA_HW_NAT_FULL_LMT=16383
+# CONFIG_RA_HW_NAT_TBL_1K is not set
+# CONFIG_RA_HW_NAT_TBL_2K is not set
+# CONFIG_RA_HW_NAT_TBL_4K is not set
+# CONFIG_RA_HW_NAT_TBL_8K is not set
+CONFIG_RA_HW_NAT_TBL_16K=y
+# CONFIG_RA_HW_NAT_HASH0 is not set
+CONFIG_RA_HW_NAT_HASH1=y
+# CONFIG_RA_HW_NAT_HASH2 is not set
+# CONFIG_RA_HW_NAT_HASH3 is not set
+CONFIG_RA_HW_NAT_TCP_KA=1
+CONFIG_RA_HW_NAT_UDP_KA=1
+CONFIG_RA_HW_NAT_NTU_KA=1
+CONFIG_RA_HW_NAT_UNB_DLTA=3
+CONFIG_RA_HW_NAT_UNB_MNP=1000
+CONFIG_RA_HW_NAT_UDP_DLTA=5
+CONFIG_RA_HW_NAT_TCP_DLTA=5
+CONFIG_RA_HW_NAT_FIN_DLTA=5
+CONFIG_RA_HW_NAT_NTU_DLTA=5
+# CONFIG_RA_HW_NAT_PREBIND is not set
+CONFIG_RA_HW_NAT_IPV6=y
+# CONFIG_RA_HW_NAT_QDMA is not set
+# CONFIG_RA_HW_NAT_MCAST is not set
+# CONFIG_RA_HW_NAT_PCI is not set
+CONFIG_RA_HW_NAT_WIFI=y
+# CONFIG_RA_HW_NAT_DEBUG is not set
+
+
 #
 # Device Drivers
 #
@@ -1950,20 +1997,20 @@ CONFIG_USB_DEFAULT_PERSIST=y
 # CONFIG_USB_C67X00_HCD is not set
 CONFIG_USB_XHCI_HCD=m
 CONFIG_USB_XHCI_PCI=m
-# CONFIG_USB_XHCI_PLATFORM is not set
+CONFIG_USB_XHCI_PLATFORM=m
 CONFIG_USB_XHCI_MTK=m
 CONFIG_USB_EHCI_HCD=m
 # CONFIG_USB_EHCI_ROOT_HUB_TT is not set
 CONFIG_USB_EHCI_TT_NEWSCHED=y
 CONFIG_USB_EHCI_PCI=m
-# CONFIG_USB_EHCI_HCD_PLATFORM is not set
+CONFIG_USB_EHCI_HCD_PLATFORM=m
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
 # CONFIG_USB_ISP1362_HCD is not set
 # CONFIG_USB_FOTG210_HCD is not set
 CONFIG_USB_OHCI_HCD=m
 # CONFIG_USB_OHCI_HCD_PCI is not set
-# CONFIG_USB_OHCI_HCD_PLATFORM is not set
+CONFIG_USB_OHCI_HCD_PLATFORM=m
 # CONFIG_USB_UHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
@@ -2830,3 +2877,24 @@ CONFIG_LIBFDT=y
 # CONFIG_ARCH_HAS_SG_CHAIN is not set
 CONFIG_HAVE_KVM=y
 # CONFIG_VIRTUALIZATION is not set
+
+
+# Sound Card support
+CONFIG_SOUND=y
+CONFIG_SOUND_OSS_CORE=y
+# CONFIG_SOUND_OSS_CORE_PRECLAIM is not set
+CONFIG_SND=y
+CONFIG_SND_TIMER=m
+CONFIG_SND_PCM=m
+CONFIG_SND_HWDEP=m
+CONFIG_SND_RAWMIDI=m
+CONFIG_SND_SEQUENCER=m
+CONFIG_SND_OSSEMUL=y
+CONFIG_SND_MIXER_OSS=m
+CONFIG_SND_PCM_OSS=y
+CONFIG_SND_PCM_OSS_PLUGINS=m
+CONFIG_SND_PCM_TIMER=y
+
+CONFIG_SND_SOC=m
+CONFIG_SND_USB=y
+CONFIG_SND_USB_AUDIO=m
