--- a/.github/workflows/padavan-4.4-build-C-Life-XG1.yml
+++ b/.github/workflows/padavan-4.4-build-C-Life-XG1.yml
@@ -14,13 +14,13 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        target: [C-Life-XG1]
+        target: [K2P-USB]
     steps:
       - uses: actions/checkout@v3
       - uses: hendrikmuhs/ccache-action@v1.2
       - uses: actions/setup-go@v3
         with:
-          go-version: '^1.18.6'
+          go-version: '^1.25.6'
       - uses: actions/cache@v3
         with:
           path: |
@@ -45,7 +45,7 @@ jobs:
           exit 1
           fi
           cp -f configs/templates/$TNAME.config .config
-          sed -i 's/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y/g' .config
+          sed -i 's/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n/g' .config
           ################################################################################################
           #因不同型号配置功能不一样，所以先把配置项删除，如果你自己要添加其他的，也要写上删除这一条，切记！！！
           ################################################################################################
@@ -60,7 +60,7 @@ jobs:
           sed -i '/CONFIG_FIRMWARE_INCLUDE_TUNSAFE/d' .config #删除配置项adbyby plus+
           sed -i '/CONFIG_FIRMWARE_INCLUDE_SMARTDNS/d' .config
           sed -i '/CONFIG_FIRMWARE_INCLUDE_SRELAY/d' .config
-          sed -i 's/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y/g' .config
+          sed -i 's/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n/g' .config
           sed -i '/CONFIG_FIRMWARE_ENABLE_FUSE/d' .config # 删除fuse
           sed -i '/CONFIG_FIRMWARE_INCLUDE_OPENVPN/d' .config # delete OPENVPN
           sed -i '/CONFIG_FIRMWARE_INCLUDE_HTOP/d' .config # delete HTOP
@@ -74,11 +74,11 @@ jobs:
           echo "CONFIG_FIRMWARE_INCLUDE_MENTOHUST=n" >> .config #MENTOHUST
           echo "CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT=n" >> .config #SCUTCLIENT
           echo "CONFIG_FIRMWARE_INCLUDE_SSOBFS=n" >> .config # simple-obfs混淆插件
-          echo "CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y" >> .config # SS plus+
+          echo "CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=n" >> .config # SS plus+
           echo "CONFIG_FIRMWARE_INCLUDE_SSSERVER=n" >> .config #SS server
           echo "CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=n" >> .config #DNSFORWARDER
           echo "CONFIG_FIRMWARE_INCLUDE_ADBYBY=n" >> .config #adbyby plus+
-          echo "CONFIG_FIRMWARE_INCLUDE_FRPC=y" >> .config #内网穿透FRPC
+          echo "CONFIG_FIRMWARE_INCLUDE_FRPC=n" >> .config #内网穿透FRPC
           echo "CONFIG_FIRMWARE_INCLUDE_FRPS=n" >> .config #内网穿透FRPS
           echo "CONFIG_FIRMWARE_INCLUDE_TUNSAFE=n" >> .config #TUNSAFE
           echo "CONFIG_FIRMWARE_INCLUDE_V2RAY=n" >> .config #集成v2ray执行文件（3.8M左右)，如果不集成，会从网上下载下来执行，不影响正常使用
@@ -94,7 +94,7 @@ jobs:
           echo "CONFIG_FIRMWARE_INCLUDE_HTOP=n" >> .config # HTOP
           echo "CONFIG_FIRMWARE_INCLUDE_XUPNPD=n" >> .config # IPTV
           echo "CONFIG_FIRMWARE_INCLUDE_OPENSSH=n" >> .config # OPENSSH
-          echo "CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y" >> .config # dropbear SSH
+          echo "CONFIG_FIRMWARE_INCLUDE_DROPBEAR=n" >> .config # dropbear SSH
           #########################################################################################
           #自定义添加其它功能请参考源码configs/templates/目录下的config文件。按照上面的格式添加即可
           #格式如下：
