--- a/.github/workflows/padavan-4.4-build-C-Life-XG1.yml
+++ b/.github/workflows/padavan-4.4-build-C-Life-XG1.yml
@@ -109,17 +109,9 @@ jobs:
             mv $image $(echo $image | sed 's/K2P/K2P-NANO/')
           fi
           echo "TAG_ANME=$(date +%Y%m%d)" >> $GITHUB_ENV
-      - uses: actions/upload-artifact@v4
-        with:
-          name: images
-          path: trunk/images/*.trx
-      - uses: rickstaa/action-create-tag@v1
-        with:
-          tag: ${{ env.TAG_ANME }}
-          force_push_tag: true
-      - uses: ncipollo/release-action@v1
-        with:
-          commit: ${{ github.sha }}
-          tag: ${{ env.TAG_ANME }}
-          artifacts: trunk/images/*.trx
-          allowUpdates: true
+    - name : Upload packages
+      uses: actions/upload-artifact@master
+      if: always()
+      with:
+        name: Padavan-packages
+        path: /opt/images
